syntax = "proto3";

package deliveryperson;

service DeliveryPersonService {
  // Queries
  rpc GetDeliveryPerson (GetDeliveryPersonRequest) returns (GetDeliveryPersonResponse);
  rpc ListAllDeliveryPersons (ListAllRequest) returns (DeliveryPersonsList);
  rpc FindAvailableDeliveryPersons (FindAvailableRequest) returns (DeliveryPersonsList);
  
  // Mutations - CRUD
  rpc CreateDeliveryPerson (CreateDeliveryPersonRequest) returns (DeliveryPersonResponse);
  rpc UpdateDeliveryPerson (UpdateDeliveryPersonRequest) returns (DeliveryPersonResponse);
  rpc DeleteDeliveryPerson (DeleteDeliveryPersonRequest) returns (DeliveryPersonResponse);
  
  // Mutations - Status e Localização
  rpc UpdateDeliveryPersonStatus (UpdateStatusRequest) returns (DeliveryPersonResponse);
  rpc UpdateDeliveryPersonLocation (UpdateLocationRequest) returns (DeliveryPersonResponse);
  
  // Mutations - Ativar/Desativar
  rpc ActivateDeliveryPerson (ActivateDeliveryPersonRequest) returns (DeliveryPersonResponse);
  rpc DeactivateDeliveryPerson (DeactivateDeliveryPersonRequest) returns (DeliveryPersonResponse);
}

message ListAllRequest {
  string status = 1;
}

message GetDeliveryPersonRequest {
  int32 deliveryPersonId = 1;
}

message GetDeliveryPersonResponse {
  bool success = 1;
  DeliveryPersonInfo deliveryPerson = 2;
}

message DeliveryPersonResponse {
  bool success = 1;
  string message = 2;
  DeliveryPersonInfo deliveryPerson = 3;
}

message CreateDeliveryPersonRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string cpf = 4;
  string vehicleType = 5;
  string licensePlate = 6;
}

message UpdateDeliveryPersonRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string vehicleType = 5;
  string licensePlate = 6;
}

message DeleteDeliveryPersonRequest {
  int32 id = 1;
}

message ActivateDeliveryPersonRequest {
  int32 id = 1;
}

message DeactivateDeliveryPersonRequest {
  int32 id = 1;
}

message FindAvailableRequest {
  double latitude = 1;
  double longitude = 2;
  double radiusKm = 3;
  string vehicleType = 4;
}

message DeliveryPersonsList {
  repeated DeliveryPersonInfo deliveryPersons = 1;
}

message DeliveryPersonInfo {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string cpf = 5;
  string vehicleType = 6;
  string licensePlate = 7;
  string status = 8;
  double rating = 9;
  int32 totalDeliveries = 10;
  double currentLatitude = 11;
  double currentLongitude = 12;
  string lastLocationUpdate = 13;
  bool isActive = 14;
  string createdAt = 15;
  string updatedAt = 16;
}

message UpdateStatusRequest {
  int32 deliveryPersonId = 1;
  string status = 2;
}

message UpdateLocationRequest {
  int32 deliveryPersonId = 1;
  double latitude = 2;
  double longitude = 3;
  double speed = 4;
  double heading = 5;
  double accuracy = 6;
}

message UpdateResponse {
  bool success = 1;
  string message = 2;
}
